--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.SayedWardakAndroidLabs" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Primary brand colour -->
+        <item name="colorPrimary">@color/my_primary</item>
+        <!-- Secondary brand color -->
+        <item name="colorSecondary">@color/my_secondary</item>
+        <!-- Status bar colour -->
+        <item name="android:statusBarColor">@color/my_statusbar</item>
+        <!-- text Color-->
+        <item name="android:textColor">@color/my_text</item>
+
     </style>
 
     <style name="Theme.SayedWardakAndroidLabs" parent="Base.Theme.SayedWardakAndroidLabs" />
