Adding compound buttons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="UI.MainActivity">
 
     <TextView
         android:id="@+id/textview"
@@ -19,11 +19,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="56dp"
         android:text="@string/button_message" />
+
     <EditText
         android:id="@+id/myEditText"
-        android:hint="@string/hinttext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:hint="@string/hinttext"
         android:text="@string/editmessage" />
 
 </LinearLayout>
