--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    android:layout_marginTop="27dp"
+    android:layout_marginBottom="27dp"
+    android:layout_marginLeft="48dp"
+    android:layout_marginRight="48dp"
+    >
 
     <Button
         android:id="@+id/button1"
@@ -12,6 +18,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:text="@string/button1"
+        android:nextFocusDown="@id/switch1"
+        android:nextFocusRight="@id/button2"
+        android:nextFocusLeft="@id/button3"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +32,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:text="@string/button2"
+        android:nextFocusDown="@id/switch1"
+        android:nextFocusRight="@id/button3"
+        android:nextFocusLeft="@id/button1"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button1"
@@ -34,6 +46,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:text="@string/button3"
+        android:nextFocusDown="@id/switch1"
+        android:nextFocusRight="@id/button1"
+        android:nextFocusLeft="@id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button2"
