--- a/app/src/main/res/layout/sent_message.xml
+++ b/app/src/main/res/layout/sent_message.xml
@@ -9,6 +9,9 @@
         android:id="@+id/theMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="32dp"
+        android:textSize="16sp"
         android:text="Message goes here"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -17,10 +20,22 @@
         android:id="@+id/theTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="32dp"
+        android:textSize="10sp"
         android:text="Time goes here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/theMessage" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/send_image"
+        app:layout_constraintBottom_toBottomOf="@id/theMessage"
+        app:layout_constraintEnd_toStartOf="@id/theMessage"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/theMessage"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
