--- a/app/src/main/res/layout/sent_message.xml
+++ b/app/src/main/res/layout/sent_message.xml
@@ -10,9 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="32dp"
-        android:textSize="16sp"
+        android:layout_marginTop="64dp"
         android:text="Message goes here"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,12 +20,12 @@
         android:id="@+id/theTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="32dp"
-        android:textSize="10sp"
+        android:layout_marginStart="88dp"
+        android:layout_marginBottom="12dp"
         android:text="Time goes here"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/theMessage" />
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/theMessage"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:layout_width="50dp"
