--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.SayedWardakAndroidLabs" parent="Theme.Material3.DayNight.NoActionBar">
+
         <!-- Primary brand colour -->
         <item name="colorPrimary">@color/my_primary</item>
         <!-- Secondary brand color -->
@@ -10,6 +11,9 @@
         <!-- text Color-->
         <item name="android:textColor">@color/my_text</item>
 
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="Theme.SayedWardakAndroidLabs" parent="Base.Theme.SayedWardakAndroidLabs" />
